--- a/main.css
+++ b/main.css
@@ -1,28 +1,105 @@
-h1{
-	color: blue;
-	text-align: center;
+body{
+  color: blue;
+}
+
+p {
+  display: block;
+  font-size: 1.5em;
+  padding-top: 1.5%;
+  padding-bottom: 0.5%;
+  padding-left: 6%;
+  font-weight: bold;
+  font-family: "Comic Sans MS";
+  color: green;
+  font-weight: normal;
+
+}
+
+a{
+  font-family: "Comic Sans MS";
+}
+
+.nav-wrapper {
+  color: #D97448 !important;
+  padding: 0% 3%;
+}
+
+#pane1{
+  
+  background-color: #FAF0E6;
+  clear: both;
+  display: inline-block;
+}
+
+#pane2{
+  background-color: #FAF0E6;
+  clear: both;
+  display: inline-block;
+  /*background-color: yellow;*/
+  /*height: 20%;*/
+}
+
+#escoger{
+  background-color: white;
+  height: 500px;
+  margin: 15% 4% 20% 8%;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#personajes{
+  background-color: white;
+  height: 500px;
+  margin: -2% 22% 5% 5%;
+  padding: 2% 5%;
+  padding-left: 10%;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .caja{
 	text-align: center;
 	position: absolute;
 	top:550px;
-	left:500px;
+	left:400px;
 }
 
+.animacionF{
+  display: block;
+  border-radius: 50%;
+   margin: 2% 70% 2% 2%;
+   padding: -5% -5% 10% 2%;
+   border: 6px solid #87CEEB;
+}
 .animacion{
 	display:block;
-    margin:auto;
-	margin-top: 50px;
+  margin:auto;
 
+  height: 50%;
+  width: 70%;
+  margin-top: 10%;
+  /*margin-left: 500px;*/
+  margin: 13% 15%;
+  
+}
+#izquierda{
+  background-color: grey;
 }
 
-.audio{
-	position: absolute;
-	top:10px;
+.audio {
+	position: relative;
+	top:-90px;
 	left:50px;
-	height: 60px;
-	width: 60px;
+	height: 4%;
+	width: 4%;
+}
+
+.descarga {
+  position: relative;
+  top:-90px;
+  left:50px;
+  height: 4.2%;
+  width: 4.2%;
 }
 
 .personajes{
