--- a/main.css
+++ b/main.css
@@ -15,6 +15,12 @@ p {
 
 }
 
+p.e{
+  font-family: "Comic Sans MS";
+  text-align: center;
+  font-size: 2.5em;
+}
+
 a{
   font-family: "Comic Sans MS";
 }
@@ -43,6 +49,7 @@ a{
   background-color: white;
   height: 500px;
   margin: 15% 4% 20% 8%;
+  padding: 2% 5%;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -64,15 +71,35 @@ a{
 	left:400px;
 }
 
-.animacionF{
-  display: block;
+.animacionF2{
+  position: relative;
+  left: 320px; 
+  top: -170px;
+}
+
+.animacionF3{
+  position: relative;
+  top: -100px;
+}
+
+.animacionF4{
+  position: relative;
+  left: 320px;
+  top:-270px;
+}
+.animacionF, .animacionF2, .animacionF3, .animacionF4{
+  /*clear: both;
+  display: inline-block;
+  float: right;*/
   border-radius: 50%;
    margin: 2% 70% 2% 2%;
    padding: -5% -5% 10% 2%;
    border: 6px solid #87CEEB;
 }
-.animacion{
-	display:block;
+.animacion, .animacion2, .animacion3, .animacion4{
+	/*clear: both;
+  display:inline-block;
+  float: left;*/
   margin:auto;
 
   height: 50%;
